# capsules

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  Licence  Readme.md  tmp.toml
capsules_compiler/: Cargo.toml  build.rs
capsules_compiler/src/: main.rs
capsules_lib/: Cargo.toml
capsules_lib/src/: ascii_art.txt  lib.rs
capsules_runtime/: Cargo.toml
capsules_runtime/src/: main.rs
schemas/: capsule.json
scripts/: build_all.sh  install_capsule_linux.sh  install_capsule_mac.sh  install_capsule_windows.sh  install_hooks.sh  next_version.sh  semantic_release.sh
scripts/hooks/: post-merge
shcemas/: capsule.json
test_project/: capsule.json  index.js  test.sh
