[workspace]
members = [
  "capsules_lib",
  "capsules_runtime",
  "capsules_compiler",
]
resolver = "3"

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1

[workspace.package]
version = "0.1.0"
license = "MIT"
edition = "2024"
repository = "https://github.com/ObelusFi/capsules"

[workspace.dependencies]
aes-gcm = "0.10.3"
atty = "0.2.14"
clap = { version = "4.5.51", features = ["derive"] }
pbkdf2 = "0.12.2"
rand = "0.9.2"
rpassword = "7.4.0"
sha2 = "0.10.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.9.8"
postcard = {version="1.1.3", features=["alloc"]}
zip = "6.0.0"
uuid = {version="1.18.1", features=["v4"]}
thiserror = "2.0.17"
sysinfo = "0.37.2"
tabled = "0.20.0"
bytesize = "2.2.0"
humanize-duration = "0.0.7"
schemars = {version = "1.1.0", features=["derive", "semver1"]}
semver = {version="1.0.27", features=["serde"]}