[package]
name = "capsules_lib"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
bytesize.workspace = true
humanize-duration.workspace = true
thiserror.workspace = true
aes-gcm.workspace = true
pbkdf2.workspace = true
rand.workspace = true
serde.workspace = true
sha2.workspace = true
semver.workspace = true

[dev-dependencies]
schemars.workspace = true
serde_json.workspace = true